--- a/app/src/main/res/layout/item_fixture_week.xml
+++ b/app/src/main/res/layout/item_fixture_week.xml
@@ -5,13 +5,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="10">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center">
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_item_fixture_week_count"
@@ -25,9 +27,21 @@
 
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_fixture_week_match"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="9"
+        android:gravity="center">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_item_fixture_week_matches"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MATCH"
+            android:textColor="@color/black"/>
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
