--- a/app/src/main/res/layout/activity_fixture.xml
+++ b/app/src/main/res/layout/activity_fixture.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FixtureActivity"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    tools:context=".FixtureActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:padding="32dp"
         android:id="@+id/rv_fixture_week"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="16dp"
         android:scrollbars="horizontal" />
 
 </LinearLayout>
