--- a/app/src/main/res/layout/item_fixture_week.xml
+++ b/app/src/main/res/layout/item_fixture_week.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:weightSum="10">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_item_fixture_week_count"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:fontFamily="serif"
             android:gravity="center"
             android:text="WEEK"
-            android:textColor="@color/black"
-            android:textSize="24sp"/>
+            android:textColor="@color/orange"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -33,15 +31,28 @@
         android:layout_weight="9"
         android:gravity="center">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_item_fixture_week_matches"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="MATCH"
-            android:textColor="@color/black"/>
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_item_fixture_week_matches"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="36dp"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:lineSpacingExtra="6dp"
+                android:text="MATCH"
+                android:textColor="@color/red"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+        </androidx.core.widget.NestedScrollView>
+
 
     </LinearLayout>
-
 
 
 </LinearLayout>
