--- a/app/src/main/res/layout/item_main_team.xml
+++ b/app/src/main/res/layout/item_main_team.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?selectableItemBackground">
+    android:layout_marginBottom="2dp"
+    android:padding="4dp">
 
-    <com.google.android.material.textview.MaterialTextView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_item_team_name"
-        android:textColor="@color/black"
-        android:gravity="center"
-        android:textSize="24sp" />
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?selectableItemBackground"
+        app:cardCornerRadius="12dp"
+        app:strokeColor="@color/green"
+        app:strokeWidth="2dp">
 
-</com.google.android.material.card.MaterialCardView>
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_item_team_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:fontFamily="serif"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+    </com.google.android.material.card.MaterialCardView>
+
+
+</LinearLayout>
