--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#45BA14</color>
+    <color name="orange">#D1AE03</color>
+    <color name="night">#21488C</color>
+    <color name="red">#8C2121</color>
+    <color name="layout_background_cream">#A8166505</color>
 </resources>
